# MNXB11-BASH

./: README.md
casestudy/: README.md
casestudy/code/: smhicleaner.sh.pseudocode  smhicleaner.sh.solution
casestudy/production/: README.md  smhicleaner.sh  smhifilter.sh
casestudy/result/: output_error_dirnofile  output_error_filenotfound  output_error_noparams  output_noerrors  report_smhi-opendata_1_52230_20210906_212532.csv
examples/: envtest.sh  forexamples.sh  getcpuinfo.sh  getsyslines.sh  getsyslines_function.sh  listfiletypes.sh  parametervars.sh  predefinedvars.sh  testif.sh
examples/calculatePI/: .CMakeLists.txt.un~  CMakeLists.txt
examples/calculatePI/scripts/: calculatepi.sbatch  runincontainer.sh
examples/calculatePI/src/: helper.hpp  main.cxx
exercises/: README.md
exercises/ex01/: README.md
exercises/ex02/: README.md
exercises/ex03/: README.md  env.output  export.output  set.output
exercises/ex04/: README.md
exercises/ex05/: README.md
exercises/ex06/: README.md  output
exercises/ex07/: README.md  output
exercises/ex08/: README.md  answers.sh  output
exercises/ex09/: README.md  answers.sh  output
exercises/ex10/: README.md
exercises/ex11/: README.md  captureoutput.sh  output
exercises/ex12/: README.md  output
exercises/ex13/: README.md  forexamples.sh  output
exercises/ex14/: README.md  output
exercises/ex4.10/: output
exercises/ex4.12/: output
exercises/ex4.13/: output
homework4/: README.md
misc/: compile.sh  compileandrun.sh  sizeoftypes.cxx
slurm/: compileandrun.sbatch  compileme.sbatch
(+120 files in other folders)
